fix: sync watcha theme

--- a/res/themes/watcha/css/_watcha-dark.scss
+++ b/res/themes/watcha/css/_watcha-dark.scss
@@ -104,6 +104,7 @@ $dark-input-lighter-bg-color: #f2f5f8;
 $dark-dialog-title-fg-color: $dark-primary-content;
 $dark-dialog-backdrop-color: $dark-menu-border-color;
 $dark-dialog-close-fg-color: #9fa9ba;
+$dark-dialog-close-external-color: $dark-primary-content;
 // ********************
 
 // RoomList
