--- a/res/css/views/settings/tabs/room/_watcha_CalendarSettingsTab.scss
+++ b/res/css/views/settings/tabs/room/_watcha_CalendarSettingsTab.scss
@@ -9,14 +9,14 @@
 }
 
 .watcha_CalendarSettingsTab_SharedCalendar,
-.watcha_CalendarSettingsTab_OwnCalendarList_StyledRadioButton .mx_RadioButton_content {
+.watcha_CalendarSettingsTab_OwnCalendarList_StyledRadioButton .mx_StyledRadioButton_content {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     .mx_AccessibleButton {
         height: min-content;
-        margin-left: 8px; // same as .mx_RadioButton_content
+        margin-left: 8px; // same as .mx_StyledRadioButton_content
         white-space: nowrap;
     }
 }
@@ -50,7 +50,7 @@
 }
 
 .watcha_CalendarSettingsTab_SharedCalendar_ownerDisplayName {
-    margin-left: 8px; // same as .mx_RadioButton_content
+    margin-left: 8px; // same as .mx_StyledRadioButton_content
     flex-grow: 1;
 }
 
@@ -62,11 +62,11 @@
 }
 
 .watcha_CalendarSettingsTab_OwnCalendarList_StyledRadioButton {
-    .mx_RadioButton_content {
+    .mx_StyledRadioButton_content {
         margin-right: 0;
         overflow: hidden;
     }
-    .mx_RadioButton_spacer {
+    .mx_StyledRadioButton_spacer {
         display: none;
     }
 }
