--- a/res/css/structures/_TabbedView.scss
+++ b/res/css/structures/_TabbedView.scss
@@ -36,8 +36,8 @@ limitations under the License.
         width: 170px;
         max-width: 170px;
         position: fixed;
-        width: 190px; // watcha+
-        max-width: 190px; // watcha+
+        width: 190px; /* stylelint-disable-line declaration-block-no-duplicate-properties */// watcha+
+        max-width: 190px; /* stylelint-disable-line declaration-block-no-duplicate-properties */// watcha+
     }
 
     .mx_TabbedView_tabPanel {
