--- a/res/themes/watcha/css/watcha.scss
+++ b/res/themes/watcha/css/watcha.scss
@@ -6,12 +6,13 @@
 @import "_watcha-dark.scss";
 @import "../../light/css/_mods.scss";
 @import "../../../../res/css/_components.scss";
-@import "_watcha-LeftPanel.scss";
-@import "_watcha-SpacePanel.scss";
 @import "_watcha-DecoratedRoomAvatar.scss";
+@import "_watcha-LeftPanel.scss";
 @import "_watcha-NotificationBadge.scss";
 @import "_watcha-RoomList.scss";
 @import "_watcha-RoomListHeader.scss";
+@import "_watcha-RoomSearch.scss";
 @import "_watcha-RoomSublist.scss";
 @import "_watcha-RoomTile.scss";
+@import "_watcha-SpacePanel.scss";
 @import "_watcha-VideoRoomSummary.scss";
