feat: improve Watcha theme

--- a/res/themes/watcha/css/watcha.scss
+++ b/res/themes/watcha/css/watcha.scss
@@ -9,6 +9,7 @@
 @import "_watcha-DecoratedRoomAvatar.scss";
 @import "_watcha-LeftPanel.scss";
 @import "_watcha-NotificationBadge.scss";
+@import "_watcha-QuickSettingsButton.scss";
 @import "_watcha-RoomList.scss";
 @import "_watcha-RoomListHeader.scss";
 @import "_watcha-RoomSearch.scss";
